# MyUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: MyUIConfig.cmake.in
examples/: main.cpp
include/: Element.hpp  MyUI.hpp  styles.hpp
include/containers/: Canvas.hpp  HScroll.hpp  Horizontal.hpp  VScroll.hpp  Vertical.hpp  containers.hpp
include/utils/: Interpolation.hpp  assetManager.hpp
include/widgets/: BitMap.hpp  Button.hpp  CheckBox.hpp  Label.hpp  widgets.hpp
src/: Element.cpp  assetManager.cpp
